--- a/presentation/src/main/res/layout/fragment_camera.xml
+++ b/presentation/src/main/res/layout/fragment_camera.xml
@@ -15,8 +15,7 @@
             app:layout_constraintBottom_toTopOf="@+id/bt_capture"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/iv_reverse">
-        </androidx.camera.view.PreviewView>
+            app:layout_constraintTop_toBottomOf="@+id/iv_reverse" />
 
         <ImageView
             android:id="@+id/iv_close"
