--- a/presentation/src/main/res/layout/fragment_camera_result.xml
+++ b/presentation/src/main/res/layout/fragment_camera_result.xml
@@ -10,9 +10,8 @@
 
         <ImageView
             android:id="@+id/iv_preview_image"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:scaleType="centerCrop"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -40,15 +39,13 @@
             android:text="@string/use_text"
             android:textColor="@color/white"
             android:textSize="12sp"
-            app:cornerRadius="20dp"
-            app:strokeColor="@color/white"
-            app:strokeWidth="1dp"
             app:backgroundTint="@color/black"
+            app:cornerRadius="20dp"
             app:layout_constraintBottom_toBottomOf="@+id/iv_back"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/iv_back">
-
-        </com.google.android.material.button.MaterialButton>
+            app:layout_constraintTop_toTopOf="@+id/iv_back"
+            app:strokeColor="@color/white"
+            app:strokeWidth="1dp" />
 
         <View
             android:id="@+id/view_empty_box"
