CameraResultFragment 화면 및 기능 구현 (#24)
* refactor: 아이콘 'shape_circle_capture_button' -> 'ic_capture_65' 로 변경

* feat: drawble 'ic_use_3_6' 추가

* refactor: fragment_camera 코드 리팩토링

* refactor: 카메라 초기값 전방 -> 후방으로 변경

* refactor: reconnectView 의 매개변수 타입 'ViewGroup' -> 'View' 로 변경

* refactor: Top과 Bottom의 연결 끊기

* refactor: bitmap 이미지 사이즈 지정코드 리팩토링

* refactor: getStatusHeightDP 함수 Util 함수로 변경

* feat: fragment_camera_result.xml 구현

* feat: CameraResultFragment UI 구현

* feat: 이미지 저장 권한 추가

* feat: 이미지 저장 기능 구현

* refactor: 리뷰 반영 - screen width, height 확장 프로퍼티로 사용 @ham2174, @EvergreenTree97

* refactof: 리뷰반영 - BaseFragment 전역변수 사용 @ham2174

* 리뷰반영 - 현재 시간(이미지 이름) 변환을 util-kotlin에서 관리 @EvergreenTree97

* refactor: 코드 리팩토링

* refactor: 리뷰반영 - ImageView의 scaleType 제거 @ham2174

* refactor: 리뷰반영 - Fragment.deviceWidth, Height 생성 @EvergreenTree97

* refactor: 이미지 파일 이름 변경

--- a/presentation/src/main/res/layout/fragment_camera.xml
+++ b/presentation/src/main/res/layout/fragment_camera.xml
@@ -15,16 +15,13 @@
             app:layout_constraintBottom_toTopOf="@+id/bt_capture"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/iv_reverse"
-            app:srcCompat="@drawable/ic_launcher_foreground">
-        </androidx.camera.view.PreviewView>
+            app:layout_constraintTop_toBottomOf="@+id/iv_reverse" />
 
         <ImageView
             android:id="@+id/iv_close"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:clickable="true"
             app:layout_constraintBottom_toBottomOf="@+id/iv_reverse"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/iv_reverse"
@@ -32,9 +29,8 @@
 
         <ImageView
             android:id="@+id/iv_reverse"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:clickable="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -45,7 +41,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
-            android:clickable="true"
             app:layout_constraintBottom_toBottomOf="@+id/iv_reverse"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/iv_reverse"
@@ -56,7 +51,7 @@
             android:layout_width="65dp"
             android:layout_height="65dp"
             android:layout_marginBottom="23dp"
-            android:background="@drawable/shape_circle_capture_button"
+            android:background="@drawable/ic_capture_65"
             android:stateListAnimator="@null"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
