--- a/presentation/src/main/res/layout/fragment_mosaic_face.xml
+++ b/presentation/src/main/res/layout/fragment_mosaic_face.xml
@@ -20,8 +20,7 @@
             app:layout_constraintStart_toStartOf="@id/tv_mosaic_figure"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_chainStyle="packed"
-            app:layout_constraintHorizontal_chainStyle="packed"
-            app:shapeAppearance="@style/ShapeAppearanceOverlay.MosaicImage" />
+            app:layout_constraintHorizontal_chainStyle="packed" />
 
 
         <com.google.android.material.imageview.ShapeableImageView
@@ -33,8 +32,7 @@
             app:layout_constraintBottom_toBottomOf="@id/iv_mosaic_figure"
             app:layout_constraintEnd_toEndOf="@id/iv_refresh"
             app:layout_constraintStart_toEndOf="@id/iv_mosaic_figure"
-            app:layout_constraintTop_toTopOf="@id/iv_mosaic_figure"
-            app:shapeAppearance="@style/ShapeAppearanceOverlay.MosaicImage" />
+            app:layout_constraintTop_toTopOf="@id/iv_mosaic_figure" />
 
 
         <TextView
