feat: Stroke 부분 Resource를 이용하지 않고, 코드 처리를 통해 적용

--- a/presentation/src/main/res/layout/viewholder_detected_face.xml
+++ b/presentation/src/main/res/layout/viewholder_detected_face.xml
@@ -19,11 +19,10 @@
             android:id="@+id/iv_face"
             android:layout_width="70dp"
             android:layout_height="70dp"
-            android:clipToOutline="true"
             android:scaleType="centerCrop"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:selectFaceItem="@{data.component3()}"
+            app:strokeFor="@{data.component3()}"
             app:shapeAppearanceOverlay="@style/ICEC.RoundedCorner_8"
             tools:src="@drawable/rv_test_image"
             tools:strokeColor="@color/SubColor"
