refactor : `clipToOutline` 코드상으로 변경 및 `clipToOutline`으로 인한 `strokeWidth` 2배수 설정

--- a/presentation/src/main/res/layout/viewholder_detected_face.xml
+++ b/presentation/src/main/res/layout/viewholder_detected_face.xml
@@ -26,7 +26,8 @@
             app:shapeAppearanceOverlay="@style/ICEC.RoundedCorner_8"
             tools:src="@drawable/rv_test_image"
             tools:strokeColor="@color/SubColor"
-            tools:strokeWidth="2dp" />
+            tools:clipToOutline="true"
+            tools:strokeWidth="4dp" />
 
         <ImageView
             android:id="@+id/iv_check"
