refactor: add animation drawable prefix

--- a/presentation/src/main/res/navigation/nav_graph.xml
+++ b/presentation/src/main/res/navigation/nav_graph.xml
@@ -10,8 +10,8 @@
         android:label="SelectMosaicEditFragment" >
         <action
             android:id="@+id/action_selectMosaicEditFragment_to_faceSelectFragment"
-            app:enterAnim="@drawable/slide_up"
-            app:popExitAnim="@drawable/slide_down"
+            app:enterAnim="@drawable/anim_slide_up"
+            app:popExitAnim="@drawable/anim_slide_down"
             app:destination="@id/faceSelectFragment" />
         <action
             android:id="@+id/action_selectMosaicEditFragment_to_photoEditFragment"
@@ -24,10 +24,10 @@
         android:label="FaceSelectFragment" >
         <action
             android:id="@+id/action_faceSelectFragment_to_faceMosaicFragment"
-            app:enterAnim="@drawable/slide_from_right"
-            app:popEnterAnim="@drawable/slide_from_left"
-            app:popExitAnim="@drawable/slide_to_right"
-            app:exitAnim="@drawable/slide_to_left"
+            app:enterAnim="@drawable/anim_slide_from_right"
+            app:popEnterAnim="@drawable/anim_slide_from_left"
+            app:popExitAnim="@drawable/anim_slide_to_right"
+            app:exitAnim="@drawable/anim_slide_to_left"
             app:destination="@id/faceMosaicFragment" />
     </fragment>
 
