모자이크 2단계 재구현 (#28)
* feat: 피그마 스펙에 맞게 icon 변경

* feat: Loading 상태에 따라 dialog 보여주도록 설정

* refactor: Debounce 제거

* refactor: Mosaic 2단계에서는 저장 버튼이 보이도록 수정

* feat: fragment 애니메이션 적용

* feat: Stroke 부분 Resource를 이용하지 않고, 코드 처리를 통해 적용

* refactor : `clipToOutline` 코드상으로 변경 및 `clipToOutline`으로 인한 `strokeWidth` 2배수 설정

* refactor: add animation drawable prefix

* refactor: add animation drawable prefix

---------

Co-authored-by: GunHyung Ham <gdreagon@naver.com>

--- a/presentation/src/main/res/layout/fragment_mosaic_face.xml
+++ b/presentation/src/main/res/layout/fragment_mosaic_face.xml
@@ -10,31 +10,31 @@
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/iv_mosaic_figure"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="68dp"
+            android:layout_height="68dp"
             android:layout_marginBottom="30dp"
             android:layout_marginEnd="30dp"
-            android:src="@drawable/ic_mosaic_inactive_50"
+            android:src="@drawable/ic_mosaic_figure_50"
+            app:shapeAppearanceOverlay="@style/ICEC.RoundedCorner_8"
             app:layout_constraintBottom_toTopOf="@id/tv_mosaic_figure"
             app:layout_constraintEnd_toStartOf="@id/iv_blur_figure"
             app:layout_constraintStart_toStartOf="@id/tv_mosaic_figure"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_chainStyle="packed"
-            app:layout_constraintHorizontal_chainStyle="packed"
-            app:shapeAppearance="@style/ShapeAppearanceOverlay.MosaicImage" />
+            app:layout_constraintHorizontal_chainStyle="packed" />
 
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/iv_blur_figure"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="68dp"
+            android:layout_height="68dp"
             android:layout_marginStart="30dp"
-            android:src="@drawable/ic_blur_inactive_50"
+            android:src="@drawable/ic_blur_figure_50"
+            app:shapeAppearanceOverlay="@style/ICEC.RoundedCorner_8"
             app:layout_constraintBottom_toBottomOf="@id/iv_mosaic_figure"
             app:layout_constraintEnd_toEndOf="@id/iv_refresh"
             app:layout_constraintStart_toEndOf="@id/iv_mosaic_figure"
-            app:layout_constraintTop_toTopOf="@id/iv_mosaic_figure"
-            app:shapeAppearance="@style/ShapeAppearanceOverlay.MosaicImage" />
+            app:layout_constraintTop_toTopOf="@id/iv_mosaic_figure" />
 
 
         <TextView
