--- a/presentation/src/main/res/values-night/colors.xml
+++ b/presentation/src/main/res/values-night/colors.xml
@@ -11,19 +11,19 @@
     <color name="gray6">#ECECEC</color>
     <color name="dark">#121212</color>
 
-    <color name="MainColor">#FFFA9A85</color>
-    <color name="SubColor">#99FA9A85</color>
+    <color name="MainColor">#E6FA00</color>
+    <color name="SubColor">#3098FF</color>
     <color name="Surface">@color/gray3</color>
-    <color name="onSurface">@color/black</color>
+    <color name="onSurface">@color/white</color>
     <color name="transparent">#00000000</color>
 
     <!-- System Theme Color -->
-    <color name="WindowBackGroundColor">#FFFFFFFF</color>
+    <color name="WindowBackGroundColor">#121212</color>
     <color name="StatusBarColor">#121212</color>
     <!-- Mosaic Button -->
-    <color name="MosaicButtonColor">#FFFA9A85</color>
+    <color name="MosaicButtonColor">#CB1E1E1E</color>
     <!-- Edit Button -->
-    <color name="EditButtonColor">#FFFA9A85</color>
+    <color name="EditButtonColor">#CB1E1E1E</color>
     <!-- Common Color -->
     <color name="ButtonIconColor">#FFFFFFFF</color>
 
