--- a/presentation/src/main/res/layout/activity_start.xml
+++ b/presentation/src/main/res/layout/activity_start.xml
@@ -1,79 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/black">
+        android:background="@color/dark">
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/bt_photo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="24dp"
-            android:drawableTop="@drawable/ic_photo_48"
-            android:paddingStart="53dp"
-            android:paddingTop="36dp"
-            android:paddingEnd="53dp"
-            android:paddingBottom="36dp"
-            android:text="@string/photo"
-            android:textAllCaps="false"
-            android:textColor="@color/white"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            app:backgroundTint="@color/gray1"
-            app:cornerRadius="16dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:strokeColor="@color/gray2"
-            app:strokeWidth="1dp" />
+            android:id="@+id/bt_gallery"
+            style="@style/ICEC.StartActivity.MaterialButton.Gallery"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginEnd="8dp"
+            android:text="@string/gallery_text"
+            app:icon="@drawable/ic_photo_48"
+            android:autoSizeTextType="uniform"
+            app:layout_constraintDimensionRatio="H,1:1"
+            app:layout_constraintEnd_toEndOf="@id/guideline3"
+            app:layout_constraintStart_toStartOf="@id/guideline1"
+            app:layout_constraintTop_toTopOf="@id/guideline0" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/bt_camera"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
-            android:drawableTop="@drawable/ic_camera_48"
-            android:paddingStart="45dp"
-            android:paddingTop="36dp"
-            android:paddingEnd="45dp"
-            android:paddingBottom="36dp"
-            android:text="@string/camera"
-            android:textAllCaps="false"
-            android:textColor="@color/white"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            app:backgroundTint="@color/gray1"
-            app:cornerRadius="16dp"
-            app:layout_constraintBottom_toBottomOf="@+id/bt_photo"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/bt_photo"
-            app:strokeColor="@color/gray2"
-            app:strokeWidth="1dp" />
+            style="@style/ICEC.StartActivity.MaterialButton.Gallery"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="8dp"
+            android:text="@string/camera_text"
+            android:autoSizeTextType="uniform"
+            app:icon="@drawable/ic_camera_48"
+            app:layout_constraintDimensionRatio="H,1:1"
+            app:layout_constraintEnd_toEndOf="@id/guideline2"
+            app:layout_constraintStart_toStartOf="@id/guideline3"
+            app:layout_constraintTop_toTopOf="@id/guideline0" />
 
-        <TextView
-            android:id="@+id/text_recent_photo"
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline0"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:text="@string/recent_photo"
-            android:textColor="@color/white"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="@+id/bt_photo"
-            app:layout_constraintTop_toBottomOf="@+id/bt_photo" />
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.5" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_recent_photo"
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:layout_marginTop="16dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="@id/text_recent_photo"
-            app:layout_constraintTop_toBottomOf="@+id/text_recent_photo" />
+            android:orientation="vertical"
+            app:layout_constraintGuide_begin="16dp" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_end="16dp" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.5" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 </layout>
