--- a/presentation/src/main/res/values-night/colors.xml
+++ b/presentation/src/main/res/values-night/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#FF000000</color>
+    <color name="black10">#1A000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="white95">#F2FFFFFF</color>
     <color name="gray1">#1E1E1E</color>
@@ -15,6 +16,7 @@
     <color name="SubColor">#3098FF</color>
     <color name="Surface">@color/gray3</color>
     <color name="onSurface">@color/white</color>
+    <color name="reverseOnSurface">@color/black</color>
     <color name="transparent">#00000000</color>
 
     <!-- System Theme Color -->
