--- a/presentation/src/main/res/values-night/styles.xml
+++ b/presentation/src/main/res/values-night/styles.xml
@@ -100,15 +100,12 @@
         <item name="strokeWidth">1dp</item>
         <item name="backgroundTint">@color/gray1</item>
         <item name="iconPadding">10dp</item>
-        <item name="android:textAppearance">@style/ICEC.StartActivity.TextAppearance</item>
-    </style>
-
-    <style name="ICEC.StartActivity.TextAppearance" parent="TextAppearance.MaterialComponents.Button">
+        <item name="iconTint">@color/white</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">18sp</item>
         <item name="android:fontFamily">@font/pretendard_bold</item>
-        <item name="android:includeFontPadding">false</item>
         <item name="android:textAllCaps">false</item>
+        <item name="android:includeFontPadding">false</item>
     </style>
 
 </resources>
