--- a/presentation/src/main/res/values/styles.xml
+++ b/presentation/src/main/res/values/styles.xml
@@ -95,19 +95,16 @@
         <item name="android:paddingEnd">48dp</item>
         <item name="iconGravity">textTop</item>
         <item name="cornerRadius">16dp</item>
-        <item name="strokeColor">@color/gray2</item>
-        <item name="strokeWidth">1dp</item>
-        <item name="backgroundTint">@color/gray1</item>
+        <item name="backgroundTint">@color/white</item>
         <item name="iconPadding">10dp</item>
-        <item name="android:textAppearance">@style/ICEC.StartActivity.TextAppearance</item>
-    </style>
-
-    <style name="ICEC.StartActivity.TextAppearance" parent="TextAppearance.MaterialComponents.Button">
-        <item name="android:textColor">@color/white</item>
+        <item name="iconTint">@color/gray1</item>
+        <item name="android:elevation">32dp</item>
+        <item name="android:stateListAnimator">@null</item>
+        <item name="android:textColor">@color/gray1</item>
         <item name="android:textSize">18sp</item>
         <item name="android:fontFamily">@font/pretendard_bold</item>
-        <item name="android:includeFontPadding">false</item>
         <item name="android:textAllCaps">false</item>
+        <item name="android:includeFontPadding">false</item>
     </style>
 
 </resources>
