--- a/presentation/src/main/res/layout/activity_start.xml
+++ b/presentation/src/main/res/layout/activity_start.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto" >
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/dark">
+        android:backgroundTint="@color/reverseOnSurface">
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/bt_gallery"
@@ -14,6 +14,7 @@
             android:layout_height="0dp"
             android:layout_marginEnd="8dp"
             android:autoSizeTextType="uniform"
+            android:outlineSpotShadowColor="@color/black10"
             android:text="@string/gallery_text"
             app:icon="@drawable/ic_photo_48"
             app:layout_constraintDimensionRatio="H,1:1"
@@ -28,6 +29,7 @@
             android:layout_height="0dp"
             android:layout_marginStart="8dp"
             android:autoSizeTextType="uniform"
+            android:outlineSpotShadowColor="@color/black10"
             android:text="@string/camera_text"
             app:icon="@drawable/ic_camera_48"
             app:layout_constraintDimensionRatio="H,1:1"
