--- a/presentation/src/main/res/layout/activity_main.xml
+++ b/presentation/src/main/res/layout/activity_main.xml
@@ -15,6 +15,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
+            android:background="@color/gray1"
             android:id="@+id/iv_image"
             android:layout_width="match_parent"
             android:layout_height="0dp"
