--- a/presentation/src/main/res/values/styles.xml
+++ b/presentation/src/main/res/values/styles.xml
@@ -105,6 +105,7 @@
         <item name="android:fontFamily">@font/pretendard_bold</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:includeFontPadding">false</item>
+        <item name="android:maxLines">1</item>
     </style>
 
 </resources>
