[Feat] 시작 화면 제작 (#29)
* feat: string 리소스 추가

* feat: drawable 리소스 추가

* feat: StartActivity UI 구현

* feat: AndroidManifest.xml 에 StartActivity 추가

* feat: 갤러리 연동하기

* refactor: 시작화면 StartActivity로 변경

* refactor: 패키지 처리

* feat: 갤러리 리사이클러뷰 생성

* refactor : 디자인 변경에 따른 `최근 작업물` 기능 관련 코드 삭제

* refactor : 디자인 변경에 따른 `최근 작업물` 기능 관련 코드 삭제

* refactor : 리소스 파일 `color-nigth-v21`, `themes-night-v21` → `color-nigth`, `themes-night`로 변경 및 `themes`의 뷰 `style` 관련 분리 및 `color dark` 추가

* refactor : `string` 리소스 리팩토링

* refactor : 카메라, 갤러리 버튼 반응형 레이아웃으로 적용

* style : 코드 포맷 정리

* refactor : `styles-night`에서 사용하지 않는 속성 제거

* feat : `color` 리소스 `back10`, `reverseOnSurface` 추가

* refactor : 갤러리, 카메라 버튼 다크모드 / 라이트모드 스타일 변경

* feat : 갤러리, 카메라 버튼 `outlineSpotShadow` 버튼 적용 및 부모 뷰그룹 `backgroundTint` 설정

* refactor : `@AndroidEntryPoint` 어노테이션 제거

* feat : 메인 액티비티로 선택한 이미지 경로 전달 및 메인 액티비티로 이동

* feat : 메인 액티비티 이미지 뷰 배경 처리

* refactor : 사용하지 않는 `string` 리소스 제거

* feat : `ICEC.StartActivity.MaterialButton.Gallery` 스타일 `maxLines` 속성 추가

* feat : `backStack` 적용 안된 화면들 적용

* refactor : 리뷰반영 @Evergreen97

* feat : `Extras` 오브젝트 생성

---------

Co-authored-by: DESKTOP-QIC63AA\user <wldbs5897@naver.com>

--- a/presentation/src/main/res/values/colors.xml
+++ b/presentation/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#FF000000</color>
+    <color name="black10">#1A000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="white95">#F2FFFFFF</color>
     <color name="gray1">#1E1E1E</color>
@@ -9,11 +10,13 @@
     <color name="gray4">#808080</color>
     <color name="gray5">#9F9F9F</color>
     <color name="gray6">#ECECEC</color>
+    <color name="dark">#121212</color>
 
     <color name="MainColor">#FFFA9A85</color>
     <color name="SubColor">#99FA9A85</color>
     <color name="Surface">@color/gray3</color>
     <color name="onSurface">@color/black</color>
+    <color name="reverseOnSurface">@color/white</color>
     <color name="transparent">#00000000</color>
 
     <!-- System Theme Color -->
