--- a/presentation/src/main/res/layout/top_bar.xml
+++ b/presentation/src/main/res/layout/top_bar.xml
@@ -88,6 +88,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/pretendard_bold"
+            android:text="@string/save_done"
             android:textColor="@color/white"
             android:textSize="16sp"
             android:visibility="gone"
@@ -95,7 +96,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="@string/save_done"
             tools:visibility="gone" />
 
         <com.google.android.material.button.MaterialButton
