--- a/presentation/src/main/res/layout/activity_main.xml
+++ b/presentation/src/main/res/layout/activity_main.xml
@@ -18,6 +18,7 @@
             android:id="@+id/iv_image"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:background="@color/gray1"
             android:scaleType="fitCenter"
             app:layout_constraintBottom_toTopOf="@+id/fragmentContainerView"
             app:layout_constraintEnd_toEndOf="parent"
@@ -29,15 +30,14 @@
             android:id="@+id/fragmentContainerView"
             android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="234dp"
             app:defaultNavHost="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/iv_image"
             app:navGraph="@navigation/nav_graph"
-            tools:layout="@layout/fragment_select_mosaic_edit"
-            tools:layout_height="114dp" />
+            tools:layout="@layout/fragment_detect_face" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
