[Refactor] 편집 기능 제거와 프로젝트 구조 수정 (#43)
* feat: 공유 아이콘 drawable 추가

* feat: 결과화면 topbar 추가

* refactor : 얼굴 검출 디폴트값 수정 `0.9f` → `90f`

* feat: 모자이크 결과 화면 UI 구현 및 공유 기능

* feat: snackbar dimes 추가

* feat: snackbar 텍스트 추가

* feat: snackbar 구현

* refactor: 코드 리팩토링

* refactor : `편집` 기능 제거에 따른 프로젝트 전체적인 구조 수정

* refactor: MainActivity 단일 상태로 변경

* 이미지 저장 구현 (#44)

* feat: ImageView를 Bitmap으로 변환하는 함수 작성

* feat: 버전에 대응하여 Image를 저장하는 함수 작성

* feat: 이미지가 저장된 후 동기적으로 다음 activity가 실행되도록 구현

* refactor : CompressQuality 상수화

* rename : `MosaicResultActivity`, `MosaicResultViewModel` 패키지 구조 변경

* refactor : `MosaicResponse` 직렬화 수정 및 `BlurResponse` 추가

* refactor : `showSnackBarAction()` 내부에 `getString()`, `getColor()` 사용으로 변경

* refactor : `MosaicResultActivity` 이미지뷰 → 포토뷰 변경

* style : 코드 포맷 변경

* refactor : 저장 기능 `MVI` 패턴 적용

* refactor: SaveImage 함수 Uri 반환하도록 변경

* fix: 29버전 이하에서 사진 저장 안되는 버그 수정

---------

Co-authored-by: jiiiiiyoon <wldbs5897@naver.com>
Co-authored-by: EvergreenTree97 <tkdfhr7497@naver.com>

--- a/presentation/src/main/res/layout/fragment_detect_face.xml
+++ b/presentation/src/main/res/layout/fragment_detect_face.xml
@@ -8,7 +8,7 @@
 
         <variable
             name="vm"
-            type="team.jsv.icec.ui.main.mosaic.MosaicViewModel" />
+            type="team.jsv.icec.ui.main.MainViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
