feat : `color` 리소스 추가

--- a/presentation/src/main/res/values-night/colors.xml
+++ b/presentation/src/main/res/values-night/colors.xml
@@ -22,6 +22,7 @@
     <!-- System Theme Color -->
     <color name="WindowBackGroundColor">#121212</color>
     <color name="StatusBarColor">#121212</color>
+    <color name="SystemColor">#121212</color>
     <!-- Mosaic Button -->
     <color name="MosaicButtonColor">#CB1E1E1E</color>
     <!-- Edit Button -->
