refactor : `CameraFragment` 화면 `backgroundColor` 테마에서 설정

--- a/presentation/src/main/res/layout/fragment_camera.xml
+++ b/presentation/src/main/res/layout/fragment_camera.xml
@@ -5,8 +5,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/black">
+        android:layout_height="match_parent" >
 
         <androidx.camera.view.PreviewView
             android:id="@+id/camera_preview"
