--- a/presentation/src/main/res/values/colors.xml
+++ b/presentation/src/main/res/values/colors.xml
@@ -20,8 +20,7 @@
     <color name="transparent">#00000000</color>
 
     <!-- System Theme Color -->
-    <color name="WindowBackGroundColor">#FFFFFFFF</color>
-    <color name="StatusBarColor">#121212</color>
+    <color name="SystemColor">#FFFFFFFF</color>
     <!-- Mosaic Button -->
     <color name="MosaicButtonColor">#FFFA9A85</color>
     <!-- Edit Button -->
