--- a/presentation/src/main/res/layout/fragment_detect_face.xml
+++ b/presentation/src/main/res/layout/fragment_detect_face.xml
@@ -20,13 +20,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginBottom="21dp"
+            android:layout_marginTop="24dp"
             android:fontFamily="@font/pretendard_medium"
             android:textColor="@color/white"
             android:textSize="14sp"
             app:detectedFaceCount="@{vm.detectFaceState.component1().component2().size()}"
-            app:layout_constraintBottom_toTopOf="@+id/rv_detected_face"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             tools:text="5명" />
 
         <com.google.android.material.button.MaterialButton
@@ -59,7 +59,8 @@
             android:id="@+id/rv_detected_face"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="30dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="24dp"
             android:clipToPadding="false"
             android:orientation="horizontal"
             android:overScrollMode="never"
@@ -68,6 +69,7 @@
             app:layout_constraintBottom_toTopOf="@+id/tv_detect_face"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/bt_group_select"
             tools:listitem="@layout/viewholder_detected_face" />
 
         <TextView
@@ -82,12 +84,22 @@
             app:layout_constraintBottom_toTopOf="@+id/sd_detect_face"
             app:layout_constraintStart_toStartOf="@+id/tv_detected_face_count" />
 
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/iv_refresh"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:src="@drawable/ic_refresh_24"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_detect_face"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/tv_detect_face" />
+
         <com.google.android.material.slider.Slider
             android:id="@+id/sd_detect_face"
             style="@style/ICEC.slider"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="26dp"
+            android:layout_marginBottom="24dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
