--- a/presentation/src/main/res/values/dimens.xml
+++ b/presentation/src/main/res/values/dimens.xml
@@ -6,6 +6,8 @@
     <dimen name="mtrl_slider_track_height" tools:override="true">5dp</dimen>
     <dimen name="mtrl_slider_thumb_radius" tools:override="true">8dp</dimen>
     <dimen name="mtrl_slider_label_padding" tools:override="true">-12dp</dimen>
+
+    <!-- Snackbar -->
     <dimen name="snackbar_margin_start">16dp</dimen>
     <dimen name="snackbar_margin_end">16dp</dimen>
     <dimen name="snackbar_margin_bottom">24dp</dimen>
