--- a/presentation/src/main/res/values/styles.xml
+++ b/presentation/src/main/res/values/styles.xml
@@ -16,7 +16,8 @@
     </style>
 
     <style name="ICEC.slider.Tooltip" parent="Widget.MaterialComponents.Tooltip">
-        <item name="backgroundTint">@android:color/transparent</item>
+        <item name="backgroundTint">@color/transparent</item>
+        <item name="android:layout_margin">0dp</item>
         <item name="android:textAppearance">@style/ICEC.slider.Tooltip.TextAppearance</item>
     </style>
 
