--- a/presentation/src/main/res/values-night/colors.xml
+++ b/presentation/src/main/res/values-night/colors.xml
@@ -19,6 +19,32 @@
     <color name="reverseOnSurface">@color/black</color>
     <color name="transparent">#00000000</color>
 
+    <!-- Custom Color -->
+    <color name="beforeTextColor1">@color/white</color>
+
+    <color name="afterTextColor1">@color/white</color>
+
+    <color name="textColor1">@color/white</color>
+    <color name="textColor2">@color/gray6</color>
+    <color name="textColor3">@color/white</color>
+
+    <color name="iconColor1">@color/white</color>
+
+    <color name="backgroundColor1">@color/gray1</color>
+    <color name="backgroundColor2">@color/dark</color>
+
+    <color name="buttonStrokeColor1">@color/white</color>
+    <color name="buttonStrokeColor2">@color/gray2</color>
+    <color name="buttonStrokeColor3">@color/transparent</color>
+
+    <color name="buttonBackgroundColor1">@color/transparent</color>
+    <color name="buttonBackgroundColor2">@color/gray1</color>
+
+    <color name="sliderTrackColorInactive">@color/gray3</color>
+    <color name="sliderTrackColorActive">@color/MainColor</color>
+
+    <color name="bottomNavigationColor">@color/SystemColor</color>
+
     <!-- System Theme Color -->
     <color name="SystemColor">#121212</color>
     <!-- Mosaic Button -->
